<resources>
    <string name="app_name">ClockApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm">Báo thức</string>
    <string name="world_time">Giờ thế giới</string>
    <string name="stop_watch">Bấm giờ</string>
    <string name="count_down">Đếm giờ</string>
    <string name="alarm_ring">Chuông báo</string>
    <string name="title_alarm">Tất cả chuông báo đều tắt</string>
    <string name="menu_delete">Xóa</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="txt_escape">Thoát</string>
    <string name="txt_save">Lưu</string>
    <string name="txt_alarm_notify">Âm thanh thông báo</string>
    <string name="txt_vibrate">Rung</string>
    <string name="txt_pause">Tạm dừng</string>
    <string name="ringtone_choosen">"Nhạc chuông đã chọn"</string>
    <string-array name="day_of_week">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>C</item>
    </string-array>
    <string-array name="list_name_vibrate_mode">
        <item>Basic call</item>
        <item>Heartbeat</item>
        <item>Ticktock</item>
        <item>Waltz</item>
        <item>Zig-zig-zig</item>
    </string-array>
    <string-array name="list_time_pause">
        <item>5 phút</item>
        <item>10 phút</item>
        <item>15 phút</item>
        <item>30 phút</item>
    </string-array>
    <string-array name="list_time_repeat">
        <item>3 lần</item>
        <item>5 lần</item>
        <item>Mãi mãi</item>
    </string-array>
    <string name="bat_dau">Bắt đầu</string>
    <string name="dung">Dừng</string>
    <string name="tam_dung">Tạm dừng</string>
    <string name="bam">Bấm</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="dat_lai">Đặt lại</string>
    <string name="hour">Giờ</string>
    <string name="minutes">Phút</string>
    <string name="seconds">Giây</string>
    <string name="add_time_count">Thêm bộ đếm giờ đặt sẵn</string>
    <string name="hien_thi_thoi_tiet">Hiển thị thời tiết </string>
    <string name="note_rung_voi_chuong_bao">Chuông báo và đếm giờ sẽ rung nếu điện thoại của bạn được đặt thành tắt âm hoăc rung. Bạn vẫn sẽ nghe thấy chuông báo khi điện thoại của bạn được đặt thành âm thanh.</string>
    <string name="utility">Tiện ích</string>
</resources>