<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/bg_round_corner"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<TextView
    android:textColor="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:text="@string/add_time_count"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/dialog_tv_hour"
            android:textColor="@color/blue_btn"
            android:textSize="20sp"
            android:focusable="true"
            android:maxLength="2"
            android:nextFocusDown="@+id/dialog_tv_minutes"
            android:inputType="numberSigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"/>
        <TextView
            android:textColor="@color/blue_btn"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"/>
        <EditText
            android:id="@+id/dialog_tv_minutes"
            android:textColor="@color/blue_btn"
            android:textSize="20sp"
            android:focusable="true"
            android:maxLength="2"
            android:nextFocusDown="@id/dialog_tv_seconds"
            android:inputType="numberSigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"/>
        <TextView
            android:textColor="@color/blue_btn"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"/>
        <EditText
            android:id="@+id/dialog_tv_seconds"
            android:textColor="@color/blue_btn"
            android:textSize="20sp"
            android:focusable="true"
            android:maxLength="2"
            android:inputType="numberSigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"/>
    </LinearLayout>
    <EditText
        android:id="@+id/dialog_name_time"
        android:hint="@string/add_time_count"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/txt_escape"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/grey"/>
        <TextView
            android:id="@+id/tv_save"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_save"/>
    </LinearLayout>

</LinearLayout>