<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp">
        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/time_picker"
            android:timePickerMode="spinner" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/bg_round_corner">
        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_time_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="demo"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/date_picker"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/calendar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_day_of_week"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-15dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/txt_time_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/edt_title_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tên chuông báo"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/recycle_day_of_week"
                />
            <LinearLayout
                android:id="@+id/line_test"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/edt_title_alarm">

                <RelativeLayout
                    android:id="@+id/layout_ringtone_sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_alarm_notifi"
                        style="@style/text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_alarm_notify"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_ringtone"
                        style="@style/text_sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/line_ring_tone"
                        android:layout_alignParentLeft="true"
                        android:paddingRight="10dp"
                        android:layout_below="@+id/txt_alarm_notifi"
                        android:text="tắt" />

                    <View
                        android:id="@+id/line_ring_tone"
                        android:layout_width="1px"
                        android:layout_height="17dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@id/sw_ringtone_sound"
                        android:background="@color/black" />

                    <Switch
                        android:id="@+id/sw_ringtone_sound"
                        style="@style/custom_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/line_divider_color" />

                <RelativeLayout
                    android:id="@+id/layout_vibrate_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_vibrate_mode"
                        style="@style/text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_vibrate"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_vibrate"
                        style="@style/text_sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_vibrate_mode"
                        android:text="tắt" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="17dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@id/sw_vibrate"
                        android:background="@color/black" />

                    <Switch
                        android:id="@+id/sw_vibrate"
                        style="@style/custom_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="#808080"/>

                <RelativeLayout
                    android:id="@+id/layout_pause_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_pause_mode"
                        style="@style/text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_pause"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_pause"
                        style="@style/text_sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_pause_mode"
                        android:text="tắt" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="17dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/sw_pause"
                        android:background="@color/black" />

                    <Switch
                        android:id="@+id/sw_pause"
                        style="@style/custom_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_below="@+id/line_test"
                android:layout_height="50dp"/>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_exit"
            style="@style/text_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_escape"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_save"
            style="@style/text_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_save"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>